Are you kidding me??
Can't click on the send button.

--- a/app/index.html
+++ b/app/index.html
@@ -161,7 +161,7 @@
       </form>
     </div>
 
-    <div id="bottom-alerts" ng-cloak>
+    <div id="bottom-alerts" ng-cloak ng-show="ticketNeeded && !ticketNeededModal">
       <div class="alert"
            ng-show="ticketNeeded && !ticketNeededModal && !ticketNeededDemon">
         <p>
