Line-wrap messages on send
Closes #14. This should probably be gated on a checkbox or something. Meh. I'll
do that later.

--- a/app/index.html
+++ b/app/index.html
@@ -116,7 +116,7 @@
                          class: (replyClass || 'message'),
                          instance: (replyInstance || 'personal'),
                          recipient: (replyRecipient|longZuser),
-                         message: replyMessage
+                         message: (replyMessage|wrapText)
                        })"
             on-keydown="replyBoxKeydown($event)">
         <div class="form-group">
