--- a/app/index.html
+++ b/app/index.html
@@ -153,7 +153,7 @@
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="replyWrapText">
+            <input type="checkbox" ng-model="replyWrapText" tabIndex=1>
             Wrap text to 70 columns.
           </label>
         </div>
