--- a/app/index.html
+++ b/app/index.html
@@ -212,7 +212,7 @@
 
                 <p>In particular, the UI is still basically
                   non-existant. It's getting there though. Press z to
-                  send a message, r to replay. Narrowing works with the
+                  send a message, r to reply. Narrowing works with the
                   same keys as barnowl. Run <code>athrun roost
                     import-subs</code> on Athena to import your zephyr
                   subs.</p>
