Update to Bootstrap 3 rc2
Closes #27.

--- a/app/index.html
+++ b/app/index.html
@@ -122,33 +122,33 @@
                        })"
             on-keydown="replyBoxKeydown($event)">
         <div class="form-group">
-          <label for="reply-form-class" class="col-2 control-label">
+          <label for="reply-form-class" class="col-xs-2 control-label">
             Class
           </label>
-          <div class="col-10">
+          <div class="col-xs-10">
             <input name="class" id="reply-form-class"
-                   class="form-control input-small" placeholder="message"
+                   class="form-control input-sm" placeholder="message"
                    focus-on="showReplyBox; focusClass"
                    ng-model="replyClass">
           </div>
         </div>
         <div class="form-group">
-          <label for="reply-form-instance" class="col-2 control-label">
+          <label for="reply-form-instance" class="col-xs-2 control-label">
             Instance
           </label>
-          <div class="col-10">
+          <div class="col-xs-10">
             <input name="instance" id="reply-form-instance"
-                   class="form-control input-small" placeholder="personal"
+                   class="form-control input-sm" placeholder="personal"
                    ng-model="replyInstance">
           </div>
         </div>
         <div class="form-group">
-          <label for="reply-form-recipient" class="col-2 control-label">
+          <label for="reply-form-recipient" class="col-xs-2 control-label">
             Recipient
           </label>
-          <div class="col-10">
+          <div class="col-xs-10">
             <input name="recipient" id="reply-form-recipient"
-                   class="form-control input-small"
+                   class="form-control input-sm"
                    ng-model="replyRecipient">
           </div>
         </div>
