--- a/app/index.html
+++ b/app/index.html
@@ -226,7 +226,7 @@
                   all. Talk to davidben if you want to know the state.</p>
 
                 <p>In particular, the UI is still basically
-                  non-existant. It's getting there though. Press z to
+                  non-existent. It's getting there though. Press z to
                   send a message, r to reply. Narrowing works with the
                   same keys as barnowl. Run <code>athrun roost
                     import-subs</code> on Athena to import your zephyr
