--- a/app/index.html
+++ b/app/index.html
@@ -188,7 +188,7 @@
     </div>
 
     <div id="bottom-alerts" ng-cloak ng-show="ticketNeeded && !ticketNeededModal">
-      <div class="alert"
+      <div class="alert alert-warning"
            ng-show="ticketNeeded && !ticketNeededModal && !ticketNeededDemon">
         <p>
           <strong>Your login is expiring soon.</strong> Use Webathena to
