Better styling for alerts at the bottom
Still click under them. Bleh. They should maybe move elsewhere really.

--- a/app/index.html
+++ b/app/index.html
@@ -200,7 +200,7 @@
       </form>
     </div>
 
-    <div id="bottom-alerts" ng-cloak ng-show="ticketNeeded && !ticketNeededModal">
+    <div id="bottom-alerts" ng-cloak>
       <div class="alert alert-warning"
            ng-show="ticketNeeded && !ticketNeededModal && !ticketNeededDemon">
         <p>
