More reasonable test syntax
Seriously.

--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
     <script>mocha.setup('bdd')</script>
     <!-- assertion framework -->
     <script src="lib/chai.js"></script>
-    <script>var expect = chai.expect</script>
+    <script>var assert = chai.assert</script>
 
     <!-- build:js /scripts/q.min.js -->
     <script src="/bower_components/q/q.js"></script>
