Update MutationObserver polyfill from upstream.
Merging in changes to forked copy. Requires pulling in WeakMap and
losing sidetable.js.

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 
     <!-- build:js /scripts/roost.min.js -->
     <script src="/scripts-src/config.js"></script>
-    <script src="/scripts-src/sidetable.js"></script>
+    <script src="/bower_components/WeakMap/weakmap.js"></script>
     <script src="/scripts-src/MutationObserver.js"></script>
     <script src="/scripts-src/polyfills.js"></script>
     <script src="/scripts-src/events.js"></script>
