Update dependencies now that Webathena doesn't use DES.
CryptoJS is still needed for MD5 to compute gravatars, but we can use a
much smaller rollup file now.

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <script src="/scripts/bootstrap.min.js"></script>
     <script src="/scripts/angular.min.js"></script>
 
-    <script src="/scripts/cryptojs-des.js"></script>
+    <script src="/scripts/cryptojs-md5.js"></script>
     <script src="/scripts/sjcl.js"></script>
 
     <script src="/scripts/webathena.js"></script>
