Wrap some zsigs in parentheses before display
A lot of people have signatures of "foo) bar (baz" to play games with
BarnOwl's default style.

--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
               <div class="message-area">
                 <pre bind-ztext="{{msg.message}}" class="message-body"></pre>
                 <div class="message-signature" ng-show="msg.signature"
-                     bind-ztext="{{msg.signature}}"></div>
+                     bind-ztext="{{msg.signature|zsigParens}}"></div>
               </div>
               <div class="message-sender-box" ng-show="selfSent">
                 <img gravatar-src="msg.sender" gravatar-size="64" class="img-rounded"
