Add a compose button.
I suppose that would be useful or something. One of these days I'll
write a real UI.

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,8 @@
         </li>
       </ul>
     </div>
+    <button id="compose-button" class="btn btn-default"
+            ng-click="compose()">Compose</button>
 
     <message-view ng-cloak>
       <div class="msgview-loading-above" ng-class="{'msgview-loading-above-at-end':atTop}">
