--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="/styles/style.css">
 
     <link rel="SHORTCUT ICON" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/roost-logo_57x57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/roost-logo_72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/roost-logo_114x114.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/roost-logo_144x144.png">
+    <link rel="apple-touch-icon" href="/img/roost-logo_57x57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/roost-logo_72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/roost-logo_114x114.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/roost-logo_144x144.png">
 
     <!-- build:js /scripts/q.min.js -->
     <script src="/bower_components/q/q.js"></script>
