--- a/app/index2.html
+++ b/app/index2.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roost</title>
+
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/style.css">
+
     <link rel="SHORTCUT ICON" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/img/roost-logo_57x57.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/img/roost-logo_72x72.png">
@@ -14,22 +18,29 @@
     <!-- build:js /scripts/q.min.js -->
     <script src="/bower_components/q/q.js"></script>
     <!-- endbuild -->
+
     <script src="/scripts/sockjs.min.js"></script>
+
     <!-- build:js /scripts/winchan.min.js -->
     <script src="/bower_components/winchan/winchan.js"></script>
     <!-- endbuild -->
 
-    <script src="/scripts/cryptojs-des.js"></script>
+    <script src="/scripts/jquery.min.js"></script>
+    <script src="/scripts/bootstrap.min.js"></script>
+    <script src="/scripts/angular.min.js"></script>
+    <script src="/scripts/cryptojs-md5.js"></script>
     <script src="/scripts/sjcl.js"></script>
-
     <script src="/scripts/webathena.js"></script>
+    <script src="/scripts/underscore.js"></script>
+    <script src="/scripts/backbone.js"></script>
+
     <!-- build:js /scripts/gss.min.js -->
     <script src="/bower_components/webathena/dist/gss.js"></script>
     <!-- endbuild -->
 
     <!-- build:js /scripts/roost.min.js -->
     <script src="/scripts-src/config.js"></script>
-    <script src="/scripts-src/sidetable.js"></script>
+    <script src="/bower_components/WeakMap/weakmap.js"></script>
     <script src="/scripts-src/MutationObserver.js"></script>
     <script src="/scripts-src/polyfills.js"></script>
     <script src="/scripts-src/events.js"></script>
@@ -46,62 +57,19 @@
     <script src="/scripts-src/colors.js"></script>
     <script src="/scripts-src/ztext.js"></script>
     <!-- endbuild -->
+
+    <!-- build:js /scripts/app.min.js -->
+    <script src="/scripts-src/app.js"></script>
+    <script src="/scripts-src/messageview.js"></script>
+    <!-- endbuild -->
+
+    <script src="/scripts-src/init.js"></script>
+    <script src="/scripts-src/MessagePaneModel.js"></script>
+    <script src="/scripts-src/MessagePaneController.js"></script>
+    <script src="/scripts-src/RoostSession.js"></script>
+    <script src="/scripts-src/endpoint.js"></script>
+
   </head>
   <body>
-    <button id="clearlog">Clear log</button>
-    <form id="subscribe">
-      <input name="class">
-      <input name="instance" value="*">
-      <input name="recipient" value="">
-      <input type="submit" value="Subscribe">
-    </form>
-    <br>
-    <form id="unsubscribe">
-      <input name="class">
-      <input name="instance" value="*">
-      <input name="recipient" value="">
-      <input type="submit" value="Unsubscribe">
-    </form>
-    <form id="getmessages">
-      <input name="offset">
-      <input type="submit" value="Load messages">
-    </form>
-    <button id="checkdemon">Check inner demon</button>
-    <button id="refreshcreds">Refresh zephyr creds</button>
-    <form id="zwrite">
-      Class: <input name="class" placeholder="message"><br>
-      Instance: <input name="instance" placeholder="personal"><br>
-      Recipient: <input name="recipient"><br>
-      <textarea name="message" rows=10 cols=80></textarea><br>
-      <input type="submit" value="Send">
-    </form>
-    <pre id="log"></pre>
-
-    <div id="renew-template" hidden>
-      <div class="dialog-overlay"></div>
-      <div class="dialog-dummy-parent">
-        <div class="dialog">
-          <p>Your login has expired</p>
-          <button class="login-button">Renew login</button>
-        </div>
-      </div>
-    </div>
-
-    <div id="login-template" hidden>
-      <div class="dialog-overlay"></div>
-      <div class="dialog-dummy-parent">
-        <div class="dialog">
-          <p>Welcome to roost</p>
-          <p>WARNING: This is very experimental right now. No
-          guarantees about it doing anything remotely reasonable at
-          all. Talk to davidben if you want to know the state.</p>
-          <button class="login-button">Login</button>
-        </div>
-      </div>
-    </div>
-
-    <!-- build:js /scripts/api-test.min.js -->
-    <script src="/scripts-src/api-test.js"></script>
-    <!-- endbuild -->
   </body>
 </html>
