--- a/app/index2.html
+++ b/app/index2.html
@@ -33,6 +33,7 @@
     <script src="/scripts/webathena.js"></script>
     <script src="/scripts/underscore.js"></script>
     <script src="/scripts/backbone.js"></script>
+    <script src="/scripts/handlebars.js"></script>
 
     <!-- build:js /scripts/gss.min.js -->
     <script src="/bower_components/webathena/dist/gss.js"></script>
@@ -64,8 +65,10 @@
     <!-- endbuild -->
 
     <script src="/scripts-src/init.js"></script>
+    <script src="/scripts-src/templates.js"></script>
     <script src="/scripts-src/MessagePaneModel.js"></script>
     <script src="/scripts-src/MessagePaneController.js"></script>
+    <script src="/scripts-src/NavBar.js"></script>
     <script src="/scripts-src/RoostSession.js"></script>
     <script src="/scripts-src/endpoint.js"></script>
 
