Better auth and sass
Broke out authentication into its own controller.
Added sass styling capabilities.

--- a/app/index2.html
+++ b/app/index2.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roost</title>
 
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/main.css">
 
     <link rel="SHORTCUT ICON" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/img/roost-logo_57x57.png">
@@ -68,6 +67,7 @@
     <script src="/scripts-src/templates.js"></script>
     <script src="/scripts-src/MessagePaneModel.js"></script>
     <script src="/scripts-src/MessagePaneController.js"></script>
+    <script src="/scripts-src/AuthenticationController.js"></script>
     <script src="/scripts-src/NavBar.js"></script>
     <script src="/scripts-src/RoostSession.js"></script>
     <script src="/scripts-src/endpoint.js"></script>
