Some messages, navbar, etc
Got the first batch of messages to load, with some idea of what to do next.

Improved the navbar and figured out how to get the roost logo to actually load (grumble grumble).

--- a/app/index2.html
+++ b/app/index2.html
@@ -60,11 +60,15 @@
 
     <!-- build:js /scripts/app.min.js -->
     <script src="/scripts-src/app.js"></script>
-    <script src="/scripts-src/messageview.js"></script>
+    <!-- <script src="/scripts-src/messageview.js"></script> -->
     <!-- endbuild -->
 
     <script src="/scripts-src/init.js"></script>
     <script src="/scripts-src/templates.js"></script>
+    <script src="/scripts-src/MessagePane.js"></script>
+    <script src="/scripts-src/MessagePaneView.js"></script>
+    <script src="/scripts-src/MessageView.js"></script>
+    <script src="/scripts-src/MessageModel.js"></script>
     <script src="/scripts-src/MessagePaneModel.js"></script>
     <script src="/scripts-src/MessagePaneController.js"></script>
     <script src="/scripts-src/AuthenticationController.js"></script>
