--- a/app/index.html
+++ b/app/index.html
@@ -253,7 +253,7 @@
                   subs.</p>
 
                 <p>Also, there isn't UI for subscribing yet, so you
-                    need <a href="/api-test.html">this other silly
+                    need <a href="/settings.html">this other silly
                     page</a></p>
               </div>
             </ng-switch>
