--- a/app/settings.html
+++ b/app/settings.html
@@ -100,8 +100,8 @@
       </div>
     </div>
 
-    <!-- build:js /scripts/api-test.min.js -->
-    <script src="/scripts-src/api-test.js"></script>
+    <!-- build:js /scripts/settings.min.js -->
+    <script src="/scripts-src/settings.js"></script>
     <!-- endbuild -->
   </body>
 </html>
