Styling, comments, etc

--- a/app/index2.html
+++ b/app/index2.html
@@ -33,6 +33,7 @@
     <script src="/scripts/underscore.js"></script>
     <script src="/scripts/backbone.js"></script>
     <script src="/scripts/handlebars.js"></script>
+    <script src="/scripts/moment.min.js"></script>
 
     <!-- build:js /scripts/gss.min.js -->
     <script src="/bower_components/webathena/dist/gss.js"></script>
