Styling, compose, and bottom jump
Added a lot of new styling and added bottom jump button.

--- a/app/index2.html
+++ b/app/index2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roost</title>
 
+    <link rel="stylesheet" href="/styles/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/main.css">
 
     <link rel="SHORTCUT ICON" href="/favicon.ico">
@@ -69,6 +70,7 @@
     <script src="/scripts-src/MessagePane.js"></script>
     <script src="/scripts-src/MessagePaneView.js"></script>
     <script src="/scripts-src/MessageView.js"></script>
+    <script src="/scripts-src/ComposeBar.js"></script>
     <script src="/scripts-src/MessageModel.js"></script>
     <script src="/scripts-src/MessagePaneModel.js"></script>
     <script src="/scripts-src/MessagePaneController.js"></script>
