Filters, new panes, etc
Added some more features in and such.

--- a/app/index2.html
+++ b/app/index2.html
@@ -71,6 +71,7 @@
     <script src="/scripts-src/MessagePaneView.js"></script>
     <script src="/scripts-src/MessageView.js"></script>
     <script src="/scripts-src/ComposeBar.js"></script>
+    <script src="/scripts-src/FilterBar.js"></script>
     <script src="/scripts-src/MessageModel.js"></script>
     <script src="/scripts-src/MessagePaneModel.js"></script>
     <script src="/scripts-src/MessagePaneController.js"></script>
