--- a/app/index2.html
+++ b/app/index2.html
@@ -75,6 +75,7 @@
     <script src="/scripts-src/MessageModel.js"></script>
     <script src="/scripts-src/MessagePaneModel.js"></script>
     <script src="/scripts-src/MessagePaneController.js"></script>
+    <script src="/scripts-src/ComposeController.js"></script>
     <script src="/scripts-src/AuthenticationController.js"></script>
     <script src="/scripts-src/NavBar.js"></script>
     <script src="/scripts-src/RoostSession.js"></script>
