--- a/app/index2.html
+++ b/app/index2.html
@@ -26,6 +26,7 @@
     <!-- endbuild -->
 
     <script src="/scripts/jquery.min.js"></script>
+    <script src="/scripts/jquery.linkify-1.0-min.js"></script>
     <script src="/scripts/cryptojs-md5.js"></script>
     <script src="/scripts/sjcl.js"></script>
     <script src="/scripts/webathena.js"></script>
@@ -55,6 +56,7 @@
     <script src="/scripts-src/userinfo.js"></script>
     <script src="/scripts-src/api.js"></script>
     <script src="/scripts-src/model.js"></script>
+    <script src="/scripts-src/url.js"></script>
     <script src="/scripts-src/ztext.js"></script>
     <!-- endbuild -->
 
