--- a/app/index2.html
+++ b/app/index2.html
@@ -68,11 +68,14 @@
     <script src="/scripts-src/MessageView.js"></script>
     <script src="/scripts-src/ComposeBar.js"></script>
     <script src="/scripts-src/FilterBar.js"></script>
+    <script src="/scripts-src/SubscriptionPanel.js"></script>
+    <script src="/scripts-src/SubscriptionModel.js"></script>
     <script src="/scripts-src/MessageModel.js"></script>
     <script src="/scripts-src/MessagePaneModel.js"></script>
     <script src="/scripts-src/MessagePaneController.js"></script>
     <script src="/scripts-src/ComposeController.js"></script>
     <script src="/scripts-src/AuthenticationController.js"></script>
+    <script src="/scripts-src/SubscriptionController.js"></script>
     <script src="/scripts-src/NavBar.js"></script>
     <script src="/scripts-src/RoostSession.js"></script>
     <script src="/scripts-src/endpoint.js"></script>
