hasty build fix

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
     <script src="/scripts/moment.min.js"></script>
     <script src="/scripts/mousetrap.min.js"></script>
     <script src="/scripts/mousetrap-pause.min.js"></script>
+    <script src="/scripts/weakmap.js"></script>
 
     <!-- build:js /scripts/gss.min.js -->
     <script src="/bower_components/webathena/dist/gss.js"></script>
@@ -43,7 +44,6 @@
 
     <!-- build:js /scripts/roost.min.js -->
     <script src="/scripts-src/config.js"></script>
-    <script src="/bower_components/WeakMap/weakmap.js"></script>
     <script src="/scripts-src/sequtil.js"></script>
     <script src="/scripts-src/polyfills.js"></script>
     <script src="/scripts-src/events.js"></script>
