--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
     <!-- build:js /scripts/app.min.js -->
     <script src="/scripts-src/init.js"></script>
     <script src="/scripts-src/templates.js"></script>
+    <script src="/scripts-src/LoginView.js"></script>
     <script src="/scripts-src/MessagePane.js"></script>
     <script src="/scripts-src/MessagePaneView.js"></script>
     <script src="/scripts-src/MessageView.js"></script>
