Swiping holy crap

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 
     <script src="/scripts/jquery.min.js"></script>
     <script src="/scripts/jquery.linkify-1.0-min.js"></script>
+    <script src="/scripts/jquery.touchSwipe.min.js"></script>
     <script src="/scripts/cryptojs-md5.js"></script>
     <script src="/scripts/sjcl.js"></script>
     <script src="/scripts/webathena.js"></script>
