Parse ztext formatting in messages and signatures.

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
     <!-- endbuild -->
 
     <!-- build:js /scripts/app.min.js -->
+    <script src="/scripts-src/colors.js"></script>
     <script src="/scripts-src/init.js"></script>
     <script src="/scripts-src/templates.js"></script>
     <script src="/scripts-src/LoginView.js"></script>
