Rewrite the ztext parser in CoffeeScript.

--- a/test/index.html
+++ b/test/index.html
@@ -30,6 +30,7 @@
     <!-- endbuild -->
 
     <!-- build:js /scripts/roost.min.js -->
+    <script src="/scripts-src/init.js"></script>
     <script src="/scripts-src/config.js"></script>
     <script src="/scripts-src/sidetable.js"></script>
     <script src="/scripts-src/MutationObserver.js"></script>
