--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
     <!-- endbuild -->
 
     <!-- build:js /scripts/app.min.js -->
+    <script src="/scripts-src/helpers.js"></script>
     <script src="/scripts-src/colors.js"></script>
     <script src="/scripts-src/templates.js"></script>
     <script src="/scripts-src/LoginView.js"></script>
