--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <script src="/scripts/moment.min.js"></script>
     <script src="/scripts/mousetrap.min.js"></script>
     <script src="/scripts/mousetrap-pause.min.js"></script>
+    <script src="/scripts/typeahead.jquery.min.js"></script>
     <script src="/scripts/weakmap.js"></script>
 
     <!-- build:js /scripts/gss.min.js -->
