New modal infrastructure using a ModalController.
The intent with this is that there's significantly less duplication
between the help modal, the future settings modal, and everything else.

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
     <script src="/scripts-src/AuthenticationController.js"></script>
     <script src="/scripts-src/SubscriptionController.js"></script>
     <script src="/scripts-src/NavBar.js"></script>
+    <script src="/scripts-src/ModalController.js"></script>
     <script src="/scripts-src/RoostSession.js"></script>
     <script src="/scripts-src/endpoint.js"></script>
     <!-- endbuild -->
